# todo-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  verify_final.py  verify_setup.py
src/todo_mcp_server/: __init__.py  database.py  models.py  server.py
src/todo_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
